--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/pizza.png">
+  <link rel="icon" href="/icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>PizzaGout</title>
 </head>
 
 <body>
